[package]
name = "nacos-api"
version = "0.1.0"
authors = ["Squbirreland <Squbirreland@outlook.com>"]
description = "Nacos - Rust Client"
edition = "2018"
readme = "README.md"
license = "Apache2.0"
exclude = [".idea", "target"]
include = ["src/**/*", "Cargo.toml", "nacos-api_macro/**/*", "LICENSE", "README.md"]
keywords = ["nacos", "nacos-api"]
repository = "https://github.com/Squbirreland/nacos-api.git"

[dependencies]
nacos-api_macro = { path = "./nacos-api_macro" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
rand = "0.8.3"