[package]
name = "nacos-api"
version = "0.2.1"
authors = ["Squbirreland <Squbirreland@outlook.com>"]
edition = "2018"
exclude = [".idea", "target", "nacos-api_macro/**/*"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/Squbirreland/nacos-api.git"

description = "Nacos - Rust Client"
keywords = ["nacos", "nacos-api"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
nacos-api_macro = { version = "0.1.0" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
rand = "0.8.3"
md5 = "0.7.0"