[package]
name = "nacos-api_macro"
version = "0.1.0"
edition = "2018"
exclude = [".idea", "target"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/Squbirreland/nacos-api.git"

description = "THIS PROJECT IS SUPPORTER FOR NACOS-API"
keywords = ["nacos-api"]
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.72"
quote = "1.0.9"
heck = "0.3.2"